dnl Process this file with autoconf to produce a configure script.
AC_INIT(hdf/jpeg/ansi2knr.c)
AC_CONFIG_HEADER(config.h)

dnl HDF specific varables
PACKAGE=HDF
VERSION=HDF4.0
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Fortran compiler 
FC=f77
FFLAGS=
AC_DEFINE_UNQUOTED(FC, "$FC")
AC_DEFINE_UNQUOTED(FFLAGS, "$FFLAGS")
AC_SUBST(FC)
AC_SUBST(FFLAGS)

dnl Archive creator
AR=ar
ARFLAGS=r
AC_DEFINE_UNQUOTED(AR, "$AR")
AC_DEFINE_UNQUOTED(ARFLAGS, "$ARFLAGS")
AC_SUBST(AR)
AC_SUBST(ARFLAGS)

dnl remove utility
RM=/bin/rm
RMFLAGS=-f
AC_DEFINE_UNQUOTED(RM, "$RM")
AC_DEFINE_UNQUOTED(RMFLAGS, "$RMFLAGS")
AC_SUBST(RM)
AC_SUBST(RMFLAGS)

dnl Checks for libraries.


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl
dnl if not defined, define off_t to be long
AC_TYPE_OFF_T
dnl if not defined, define size_t to be unsigned
AC_TYPE_SIZE_T
dnl if have sys/time.h, define TIME_WITH_SYS_TIME
AC_HEADER_TIME
dnl if not defined, define const to be empty
AC_C_CONST
dnl if bigendian, define WORDS_BIGENDIAN
AC_C_BIGENDIAN
dnl if GCC supports inline, define inline tob  __inline
AC_C_INLINE
dnl if C type char is unsigned, define __CHAR_UNSIGNED__(unless pre-def by CC)
AC_C_CHAR_UNSIGNED
dnl if C compiler supports long double type, define HAVE_LONG_DOUBLE
AC_C_LONG_DOUBLE
dnl Check builtin C data types
AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(double)
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(long)

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_VFORK
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday strdup strerror strtod strtol)

dnl Checks for System Services
dnl if system supports file names > 14 chars, define HAVE_LONG_FILE_NAMES
AC_SYS_LONG_FILE_NAMES

dnl Checks for Unix Variants(most should be called before any test of CC)
dnl if AIX box, defines _ALL_SOURCE
dnl AC_AIX
dnl if POSIX unix, define _POSIX_SOURCE and add -posix
dnl AC_ISC_POSIX

dnl Configure netcdf distribution
AC_CONFIG_SUBDIRS(mfhdf)

dnl Generate Makefiles for HDF distribution part
AC_OUTPUT(Makefile \
        hdf/Makefile\
        hdf/src/Makefile \
        hdf/test/Makefile)

